@@ -1,21 +1,27 @@
 plugins {
     id 'application'
-    id 'java'
 }
-
-group = 'com.unischedule'
-version = '1.0'
-sourceCompatibility = '17'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation 'org.openjfx:javafx-controls:21'
-    implementation 'org.openjfx:javafx-fxml:21'
+    def javafxVersion = '21.0.1'
+    implementation "org.openjfx:javafx-controls:$javafxVersion"
+    implementation "org.openjfx:javafx-fxml:$javafxVersion"
 }
 
 application {
     mainClass = 'MainApplication'
+    applicationDefaultJvmArgs = [
+        '--module-path', "${System.getProperty('java.home')}/lib",
+        '--add-modules', 'javafx.controls,javafx.fxml'
+    ]
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(21)
+    }
 }
